# laba3-3

C++/: CMakeLists.txt  script.sh
C++/src/: arr.cpp  hash.cpp  list.cpp  queue.cpp  stack.cpp  tree.cpp
C++/structures/: arr.h  hash.h  list.h  nodes.h  queue.h  stack.h  timer.h  tree.h
C++/tests/: test_arr.cpp  test_hashtable.cpp  test_list.cpp  test_queue.cpp  test_stack.cpp  test_tree.cpp
GO/: data.txt  go.mod  main.go  my_project  script.sh
GO/coverage_html/: coverage.out  index.html
GO/ser/: main
GO/serialization/: serialization.go
GO/tree/: tree.go  tree_test.go
